# pycoimset

./: .gitattributes  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml  python-release-package.yml
doc/source/: conf.py
examples/: requirements.txt
examples/lotka-volterra/: default-parameters.json  lotka.py  plot.py  pyproject.toml  requirements.txt  solution.json  solve.py
examples/lotka-volterra/lotka_volterra/: __init__.py  objective.py  ode.py  polyfit.py  similarity_class.py  space.py  typing.py
examples/lotka-volterra/lotka_volterra/ext/: __init__.py  scipy.py
examples/lotka-volterra/tests/: __init__.py  test_signed_measure.py  test_similarity_class.py
examples/poisson-design/: functionals.py  parameters.json  penalty-default.json  pyproject.toml  requirements.txt  solve.py  space.py  unconstrained-default.json
examples/poisson-design/pde/: __init__.py  evaluator.py  forms.py
examples/poisson-srcinv/: functionals.py  pde.py  poisson.py  requirements.txt  space.py  util.py
examples/poisson-srcinv/pde/: evaluator.py  forms.py
pycoimset/: __init__.py  functional.py  problem.py  space.py  typing.py
pycoimset/helpers/: __init__.py  functionals.py
pycoimset/logging/: __init__.py  tabular.py
pycoimset/solver/: __init__.py  barrier.py  error.py  penalty.py  unconstrained.py
pycoimset/solver/constrained/: __init__.py  barrier.py
pycoimset/solver/penalty/: __init__.py  eval.py  solver.py
pycoimset/solver/penalty/eval/: __init__.py  component.py  infeasibility.py  penalty_grad.py  penalty_value.py  update_pen_grad.py
pycoimset/solver/unconstrained/: __init__.py  eval.py  solver.py
pycoimset/spaces/: __init__.py  generic.py  interval.py
pycoimset/step/: __init__.py  steepest_descent.py  step_finder.py
pycoimset/typing/: __init__.py  functional.py  io.py  solver.py  space.py
pycoimset/util/: __init__.py  cache.py  controlled_eval.py  dependency.py  input_check.py  signals.py  timing.py  weakref.py
test/spaces/: test_interval.py
