[project]
name = "pycoimset"
version = "0.1.0"
description = "Python library for set-valued optimization"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [ { name = "Mirko Hahn", email = "mirhahn@ovgu.de" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy>=1.24.2'
]

[project.optional-dependencies]
lotka = [
  'numpy',
  'scipy==1.10.1',
  'sortednp'
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
