[project]
name = "pycoimset"
dynamic = ["version"]
description = "Python library for set-valued optimization"
readme = "README.md"
requires-python = "~= 3.11"
license = { file = "LICENSE.md" }
authors = [ { name = "Mirko Hahn", email = "mirhahn@ovgu.de" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy ~= 1.24'
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools.packages.find]
include = ["pycoimset*"]

[tool.setuptools_scm]
