[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pycoimset"
dynamic = ["version"]
description = "Python library for optimization of sets"
readme = "README.md"
requires-python = ">= 3.11"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
authors = [ { name = "Mirko Hahn", email = "mirhahn@ovgu.de" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.26'
]

[project.urls]
source = "https://github.com/mirhahn/pycoimset"
issues = "https://github.com/mirhahn/pycoimset/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0"
]

[tool.hatch.build.targets.wheel]
packages = ["pycoimset"]

[tool.hatch.build.targets.sdist]
include = [
    "/pycoimset/**/*.py",
    "/test"
]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test"
]
