[project]
name = "pycoimset-ex-lotka"
version = "0.1.1"
description = "Lotka-Volterra Fishing problem for PyCoimset."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [ { name = "Mirko Hahn", email = "mirhahn@ovgu.de" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pycoimset==0.1.1",
    "numpy",
    "scipy==1.10.1",
    "sortednp"
]
