[project]
name = "pycoimset-ex-poisson-design"
version = "0.1.1"
description = "Poisson Topology Optimization problem for PyCoimset."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [ { name = "Mirko Hahn", email = "mirhahn@ovgu.de" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pycoimset==0.1.1",
    "matplotlib",
    "meshio[all]",
    "numpy",
    "scipy",
    "scikit-fem[all]"
]
